fix: tweak alignment when `search` is not enabled

--- a/src/banner/banner-style.css
+++ b/src/banner/banner-style.css
@@ -63,6 +63,10 @@
     color: #fff;
 }
 
+.banner__link--offset {
+    margin-right: -1.5em;
+}
+
 .banner--search .banner__link {
     pointer-events: none;
     overflow: hidden;
